--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js"
@@ -16,6 +17,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
+    "youtube-dl-exec": "^3.0.10",
     "ytdl-core": "^4.11.5"
   }
 }
