--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,10 +11,9 @@
   },
   "dependencies": {
     "axios": "1.7.9",
-    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reactstrap": "^9.2.2"
+    "zod": "3.24.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
